--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "autoload" : {
     "psr-0" : {
-      "Lcn\\WeatherForecastBundle" : ""
+      "Lcn\\FileUploaderBundle" : ""
     }
   },
   "target-dir" : "Lcn/FileUploaderBundle",
