--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -69,15 +69,14 @@ services:
     lcn.file_uploader:
         class: Lcn\FileUploaderBundle\Services\FileUploader
         arguments:
-          - file_base_path: '%lcn_file_uploader.file_base_path%'
+          - container: @service_container
+            file_base_path: '%lcn_file_uploader.file_base_path%'
             web_base_path: '%lcn_file_uploader.web_base_path%'
-            request: '@request'
             file_manager: '@lcn.file_uploader_file_manager'
             allowed_extensions: '%lcn_file_uploader.allowed_extensions%'
             sizes: '%lcn_file_uploader.sizes%'
             originals: '%lcn_file_uploader.originals%'
             max_number_of_files: '%lcn_file_uploader.max_number_of_files%'
-        scope: request
 
     # You usually won't need this sub-service directly,
     # however you can access it from a command, which is
