--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -5,6 +5,9 @@ parameters:
   lcn_file_uploader.temp_file_base_path: "%kernel.root_dir%/../web/uploads/lcn-file-uploader-temp"
   lcn_file_uploader.temp_web_base_path: "/uploads/lcn-file-uploader-temp"
   lcn_file_uploader.upload_handler.class: "Lcn\FileUploaderBundle\Services\UploadHandler"
+  lcn_file_uploader.assets.js.main: '/bundles/lcnfileuploader/dist/main.js'
+  lcn_file_uploader.assets.css.main: '/bundles/lcnfileuploader/dist/main.css'
+  lcn_file_uploader.assets.css.theme: '/bundles/lcnfileuploader/dist/theme.css'
 
   lcn_file_uploader.allowed_extensions:
     # Mime types are just for documentation's sake.
@@ -82,8 +85,14 @@ services:
         tags:
             -  { name: console.command }
 
-    lcn.twig.file_extension:
+    lcn.file_uploader.twig_extension:
         class: Lcn\FileUploaderBundle\Twig\FileUploaderExtension
         arguments: [@lcn.file_uploader]
+        tags:
+            - { name: twig.extension }
+
+    lcn.file_uploader.include_assets_twig_extension:
+        class: Lcn\FileUploaderBundle\Twig\FileUploaderIncludeAssetsExtension
+        arguments: [@service_container, '%lcn_file_uploader.assets.js.main%', '%lcn_file_uploader.assets.css.main%', '%lcn_file_uploader.assets.css.theme%']
         tags:
             - { name: twig.extension }
