hide add button if maximum number of files has been reached

--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
     "url": "https://github.com/FaiblUG/LcnFileUploaderBundle"
   },
   "author": "Jonas Fischer-Maeck",
-  "license": "proprietary"
+  "license": "MIT"
 }
