--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "lcn-file-uploader-bundle",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "private": true,
   "description": "Easy ajax file uploads for Symfony2",
   "main": "Resources/public/dist/lcn-file-uploader-bundle.js",
   "devDependencies": {
-    "gulp": "~3.8",
-    "gulp-concat": "~2.4",
-    "gulp-minify-css": "~0.3",
-    "gulp-clean": "~0.3",
-    "gulp-uglify": "~1.0",
-    "gulp-autoprefixer": "~2.1",
     "autoprefixer": "~4.0",
+    "gulp": "~3.8",
+    "gulp-autoprefixer": "~2.1",
+    "gulp-clean": "~0.3",
+    "gulp-concat": "~2.4",
+    "gulp-gzip": "^1.1.0",
+    "gulp-minify-css": "~0.3",
+    "gulp-rename": "~1.2",
     "gulp-sass": "~1.3",
-    "gulp-rename": "~1.2"
+    "gulp-uglify": "~1.0"
   },
   "repository": {
     "type": "git",
