--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -5,7 +5,7 @@ parameters:
   lcn_file_uploader.web_base_path: "/uploads/lcn-file-uploader"
   lcn_file_uploader.temp_file_base_path: "%kernel.root_dir%/../web/uploads/lcn-file-uploader-temp"
   lcn_file_uploader.temp_web_base_path: "/uploads/lcn-file-uploader-temp"
-  lcn_file_uploader.upload_handler.class: "Lcn\FileUploaderBundle\Services\UploadHandler"
+  lcn_file_uploader.upload_handler.class: "\\Lcn\\FileUploaderBundle\\Services\\UploadHandler"
   lcn_file_uploader.assets.js.main: '/bundles/lcnfileuploader/dist/main.js'
   lcn_file_uploader.assets.css.main: '/bundles/lcnfileuploader/dist/main.css'
   lcn_file_uploader.assets.css.theme: '/bundles/lcnfileuploader/dist/theme.css'
